--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jasa Joki Genshin Impact - DWStore</title>
+  <title>Jasa Joki Genshin Impact - KenJoki</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -75,7 +75,7 @@
     <h2 style="color: #007acc;">💎 Jasa Joki Primogem</h2>
     <div class="section">
       <div>
-        <img src="https://i.imgur.com/GfLWq07.jpeg" alt="Joki Primogem">
+        <img src="Primo.jpg" alt="Simbol item Primogem Genshin Impact">
       </div>
       <div class="text-block">
         <h3>💰 List Harga:</h3>
@@ -114,7 +114,7 @@
       <h2>🌪️ Jasa Joki Anemoculus</h2>
       <div class="section">
         <div>
-          <img src="https://i.imgur.com/9PLWNIf.jpeg" alt="Anemoculus">
+          <img src="Anemo.jpg" alt="Simbol item Anemoculus Genshin Impact">
         </div>
         <div class="text-block">
           <h3>📦 Paket Harga:</h3>
@@ -142,7 +142,7 @@
       <h2>🪨 Jasa Joki Geoculus</h2>
       <div class="section">
         <div>
-          <img src="https://i.imgur.com/E0jqv8u.jpeg" alt="Geoculus">
+          <img src="Geo.jpg" alt="Simbol item Geoculus Genshin Impact">
         </div>
         <div class="text-block">
           <h3>📦 Paket Harga:</h3>
