--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jasa Joki Genshin Impact - KenJoki</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f8ff;
+      font-family: 'Cinzel', serif;
+      /* Gradien langit + pattern bintang */
+      background: linear-gradient(180deg, #90caf9 0%, #e3f2fd 40%, #fff8e1 100%), 
+                  url('https://i.ibb.co/CPBp7N2/stars-pattern.png');
+      background-size: cover;
+      background-attachment: fixed;
       color: #000;
       padding: 20px;
       margin: 0;
     }
     .container {
-      background-color: #f0f8ff;
+      background-color: rgba(255,255,255,0.88);
       padding: 20px;
       border-radius: 15px;
       max-width: 900px;
       margin: auto;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0,0,0,0.15);
     }
     h2 {
       text-align: center;
       margin-top: 40px;
+      background: linear-gradient(90deg, #1a237e, #f9a825);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
     }
     .section {
       display: flex;
@@ -35,6 +44,7 @@
       width: 100%;
       max-width: 200px;
       border-radius: 12px;
+      border: 3px solid #f9a825;
     }
     .text-block {
       flex: 2;
@@ -50,18 +60,19 @@
       margin-top: 15px;
     }
     a.button {
-      background-color: #007acc;
+      background: linear-gradient(90deg, #1a237e, #f9a825);
       color: white;
       padding: 10px 20px;
       text-decoration: none;
       border-radius: 10px;
       display: inline-block;
       margin-top: 10px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    .anemo h2 { color: #00aa88; }
-    .anemo a.button { background-color: #00aa88; }
-    .geo h2 { color: #aa7700; }
-    .geo a.button { background-color: #aa7700; }
+    a.button:hover {
+      opacity: 0.9;
+    }
     hr {
       margin: 30px 0;
       border-top: 1px solid #ccc;
@@ -72,10 +83,10 @@
   <div class="container">
 
     <!-- PRIMOGEM -->
-    <h2 style="color: #007acc;">💎 Jasa Joki Primogem</h2>
+    <h2>💎 Jasa Joki Primogem</h2>
     <div class="section">
       <div>
-        <img src="Primo.jpg" alt="Simbol item Primogem Genshin Impact">
+        <img src="Primo.jpg" alt="Primogem Genshin Impact">
       </div>
       <div class="text-block">
         <h3>💰 List Harga:</h3>
@@ -110,56 +121,97 @@
     <hr>
 
     <!-- ANEMOCULUS -->
-    <div class="anemo">
-      <h2>🌪️ Jasa Joki Anemoculus</h2>
-      <div class="section">
-        <div>
-          <img src="Anemo.jpg" alt="Simbol item Anemoculus Genshin Impact">
-        </div>
-        <div class="text-block">
-          <h3>📦 Paket Harga:</h3>
-          <ul>
-            <li>💵 Full Anemoculus (0–66) = Rp 50.000</li>
-            <li>📊 Sisaan: Chat untuk cek harga (bisa dihitung per titik)</li>
-          </ul>
-        </div>
+    <h2>🌪️ Jasa Joki Anemoculus</h2>
+    <div class="section">
+      <div>
+        <img src="Anemo.jpg" alt="Anemoculus Genshin Impact">
       </div>
-      <div class="note">
-        <p>✅ 100% Anemoculus dijamin kelar</p>
-        <p>⚡ Proses cepat dan aman</p>
-        <p>🛡️ Tanpa cheat, tanpa risiko</p>
-        <p>📽️ Bisa request screen record/log aktivitas</p>
-        <p>🎁 Bonus: Peti & teleport point saat ketemu di jalan!</p>
-        <p>⏳ Waktu pengerjaan: ±1.5 jam</p>
-        <a href="https://wa.me/62882007980236?text=Halo%20saya%20mau%20pesan%20joki%20Anemoculus" class="button">📩 Order Sekarang</a>
+      <div class="text-block">
+        <h3>📦 Paket Harga:</h3>
+        <ul>
+          <li>💵 Full Anemoculus (0–66) = Rp 50.000</li>
+          <li>📊 Sisaan: Chat untuk cek harga (bisa dihitung per titik)</li>
+        </ul>
       </div>
+    </div>
+    <div class="note">
+      <p>✅ 100% Anemoculus dijamin kelar</p>
+      <p>⚡ Proses cepat dan aman</p>
+      <p>🛡️ Tanpa cheat, tanpa risiko</p>
+      <p>📽️ Bisa request screen record/log aktivitas</p>
+      <p>🎁 Bonus: Peti & teleport point saat ketemu di jalan!</p>
+      <p>⏳ Waktu pengerjaan: ±1.5 jam</p>
+      <a href="https://wa.me/62882007980236?text=Halo%20saya%20mau%20pesan%20joki%20Anemoculus" class="button">📩 Order Sekarang</a>
     </div>
 
     <hr>
 
     <!-- GEOCULUS -->
-    <div class="geo">
-      <h2>🪨 Jasa Joki Geoculus</h2>
-      <div class="section">
-        <div>
-          <img src="Geo.jpg" alt="Simbol item Geoculus Genshin Impact">
-        </div>
-        <div class="text-block">
-          <h3>📦 Paket Harga:</h3>
-          <ul>
-            <li>💵 Full Geoculus (0–131) = Rp 110.000</li>
-          </ul>
-        </div>
+    <h2>🪨 Jasa Joki Geoculus</h2>
+    <div class="section">
+      <div>
+        <img src="Geo.jpg" alt="Geoculus Genshin Impact">
       </div>
-      <div class="note">
-        <p>✅ 100% Geoculus dijamin kelar</p>
-        <p>⚡ Proses cepat dan aman</p>
-        <p>🛡️ Tanpa cheat, tanpa risiko</p>
-        <p>📽️ Bisa request screen record/log aktivitas</p>
-        <p>🎁 Bonus: Peti & teleport point saat ketemu di jalan!</p>
-        <p>⏳ Waktu pengerjaan: 3–5 jam</p>
-        <a href="https://wa.me/62882007980236?text=Halo%20saya%20mau%20pesan%20joki%20Geoculus" class="button">📩 Pesan Sekarang</a>
+      <div class="text-block">
+        <h3>📦 Paket Harga:</h3>
+        <ul>
+          <li>💵 Full Geoculus (0–131) = Rp 110.000</li>
+        </ul>
       </div>
+    </div>
+    <div class="note">
+      <p>✅ 100% Geoculus dijamin kelar</p>
+      <p>⚡ Proses cepat dan aman</p>
+      <p>🛡️ Tanpa cheat, tanpa risiko</p>
+      <p>📽️ Bisa request screen record/log aktivitas</p>
+      <p>🎁 Bonus: Peti & teleport point saat ketemu di jalan!</p>
+      <p>⏳ Waktu pengerjaan: 3–5 jam</p>
+      <a href="https://wa.me/62882007980236?text=Halo%20saya%20mau%20pesan%20joki%20Geoculus" class="button">📩 Pesan Sekarang</a>
+    </div>
+
+    <hr>
+
+    <!-- EKSPLORE & SPIRAL ABYSS -->
+    <h2>🗺️ Joki Eksplore & Spiral Abyss</h2>
+    <div class="section">
+      <div>
+        <img src="Explore.jpg" alt="Joki Eksplore Genshin Impact">
+      </div>
+      <div class="text-block">
+        <h3>📜 Layanan:</h3>
+        <ul>
+          <li>🗺️ Eksplore: <b>FREE</b> di akhir bulan (1 jam), harga setelahnya menyesuaikan</li>
+          <li>⚔️ Spiral Abyss: Harga menyesuaikan</li>
+        </ul>
+      </div>
+    </div>
+    <div class="note">
+      <p>✅ Eksplore wilayah, buka teleport, ambil peti</p>
+      <p>✅ Spiral Abyss push lantai maksimal</p>
+      <a href="https://wa.me/62882007980236?text=Halo%20mau%20pesan%20joki%20Eksplore%20atau%20Spiral%20Abyss" class="button">📩 Chat Sekarang</a>
+    </div>
+
+    <hr>
+
+    <!-- RAWAT AKUN -->
+    <h2>🛡️ Joki Rawat Akun</h2>
+    <div class="section">
+      <div>
+        <img src="Rawat.jpg" alt="Rawat Akun Genshin Impact">
+      </div>
+      <div class="text-block">
+        <h3>📦 Paket:</h3>
+        <ul>
+          <li>📅 Paket Day – Rp 5.000 (1 hari: Daily Quest, Ekspedisi, Resin)</li>
+          <li>📅 Paket Week – Rp 25.000 (7 hari: Daily Quest, Ekspedisi, Resin, Event)</li>
+          <li>📅 Paket Month – Rp 70.000 (30 hari: Daily Quest, Ekspedisi, Resin, Event)</li>
+        </ul>
+      </div>
+    </div>
+    <div class="note">
+      <p>✅ Cocok untuk yang sibuk & gak sempat login</p>
+      <p>🕒 Semua dilakukan tepat waktu & aman</p>
+      <a href="https://wa.me/62882007980236?text=Halo%20mau%20pesan%20joki%20Rawat%20Akun" class="button">📩 Booking Sekarang</a>
     </div>
 
   </div>
