--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <h2>🗺️ Joki Eksplore & Spiral Abyss</h2>
     <div class="section">
       <div>
-        <img src="Explore.png" alt="Joki Eksplore Genshin Impact">
+        <img src="Explore.jpg" alt="Joki Eksplore Genshin Impact">
       </div>
       <div class="text-block">
         <h3>📜 Layanan:</h3>
@@ -197,7 +197,7 @@
     <h2>🛡️ Joki Rawat Akun</h2>
     <div class="section">
       <div>
-        <img src="Rawat.png" alt="Rawat Akun Genshin Impact">
+        <img src="Rawat.jpg" alt="Rawat Akun Genshin Impact">
       </div>
       <div class="text-block">
         <h3>📦 Paket:</h3>
