--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
     <div class="note">
       <p>✅ Eksplore wilayah, buka teleport, ambil peti</p>
       <p>✅ Spiral Abyss push lantai maksimal</p>
-      <a href="https://wa.me/62882007980236?text=Halo%20mau%20pesan%20joki%20Eksplore%20atau%20Spiral%20Abyss" class="button">📩 Chat Sekarang</a>
-    </div>
+      <a href="https://wa.me/62882007980236?text=Halo%20mau%20pesan%20joki%20Eksplore" class="button">📩 Chat Sekarang untuk pesan joki explore</a>
+      <a href="https://wa.me/62882007980236?text=Halo%20mau%20pesan%20joki%20Spriral%20Abyss" class="button">📩Chat sekarang untuk pesan joki spiral abyss</a>
+</div>
 
     <hr>
 
