--- a/index.html
+++ b/index.html
@@ -89,22 +89,7 @@
         <img src="Primo.jpg" alt="Primogem Genshin Impact">
       </div>
       <div class="text-block">
-        <h3>💰 List Harga:</h3>
-        <ul>
-          <li>2K = 200 primogem</li>
-          <li>5K = 500 primogem</li>
-          <li>10K = 1.000 primogem</li>
-          <li>15K = 1.600 primogem</li>
-          <li>20K = 2.100 primogem</li>
-          <li>25K = 2.600 primogem</li>
-          <li>35K = 3.600 primogem</li>
-          <li>60K = 6.350 primogem</li>
-          <li>75K = 7.600 primogem</li>
-          <li>85K = 8.600 primogem</li>
-          <li>95K = 9.600 primogem</li>
-          <li>110K = 11.200 primogem</li>
-          <li>130K = 13.100 primogem</li>
-        </ul>
+        <h3>💰 Harga bisa langsung DM📩:</h3>              
       </div>
     </div>
     <div class="note">
