--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <img src="Primo.jpg" alt="Primogem Genshin Impact">
       </div>
       <div class="text-block">
-        <h3>💰 Harga bisa langsung DM📩:</h3>              
+        <h3>💰 Harga bisa langsung DM📩</h3>              
       </div>
     </div>
     <div class="note">
