--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
         <img src="Primo.jpg" alt="Primogem Genshin Impact">
       </div>
       <div class="text-block">
-        <h3>💰 Harga bisa langsung DM📩</h3>              
+        <h3>💰 List Harga</h3>
+        <li>30K = 1.600 Primogems</li>
+        <li>60K = 3.200 Primogems</li>
+        <li>90K = 4.800 Primogems</li>
+        <li>120K = 6.400 Primogems</li>
+        <li>150K = 8.000 Primogems</li>
+        <li>180k = 9.600 Primogems</li>
+        <li>dst.</li>
       </div>
     </div>
     <div class="note">
